<resources>
    <!-- splash activity -->
    <string name="generating_collection">Generating collection</string>

    <!-- main activity -->
    <string name="app_name">Gwent Tracker</string>
    <string name="tab_text_1">Collection</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <!-- action bar & filters -->
    <string name="filters_reset">Reset filters</string>
    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_by_name">Name</string>
    <string name="action_sort_by_rarity">Rarity</string>
    <string name="action_settings">Settings</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <!-- card -->
    <string name="card_faction">Faction</string>
    <string name="card_rarity">Rarity</string>
    <string name="card_str">Strength</string>
    <string name="card_categories">Categories</string>
    <string name="card_flavor">Flavor</string>
    <string name="card_info">Info</string>
    <string name="card_related">Related</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_languages_list">Language</string>
    <string-array name="pref_lang_list_titles">
        <item>de-DE</item>
        <item>en-US</item>
        <item>es-ES</item>
        <item>es-MX</item>
        <item>fr-FR</item>
        <item>it-IT</item>
        <item>ja-JP</item>
        <item>ko-KR</item>
        <item>pl-PL</item>
        <item>pt-BR</item>
        <item>ru-RU</item>
        <item>zh-CN</item>
        <item>zh-TW</item>
    </string-array>
    <string-array name="pref_lang_list_values">
        <item>de-DE</item>
        <item>en-US</item>
        <item>es-ES</item>
        <item>es-MX</item>
        <item>fr-FR</item>
        <item>it-IT</item>
        <item>ja-JP</item>
        <item>ko-KR</item>
        <item>pl-PL</item>
        <item>pt-BR</item>
        <item>ru-RU</item>
        <item>zh-CN</item>
        <item>zh-TW</item>
    </string-array>

</resources>
