<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.robbcocco.gwenttracker.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_1" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_2" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_3" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_filter_list_24dp" />

    <LinearLayout
        android:id="@+id/filters"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="0dp"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:background="@color/colorAccent"
        android:clickable="true"
        android:focusable="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="0dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:gravity="start"
            android:textSize="12sp"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            android:text="@string/card_faction"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/filter_factions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal">
        </android.support.v7.widget.RecyclerView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="0dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:gravity="start"
            android:textSize="12sp"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            android:text="@string/card_categories"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/filter_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal">
        </android.support.v7.widget.RecyclerView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="0dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:gravity="start"
            android:textSize="12sp"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            android:text="@string/card_rarity"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/filter_rarities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal">
        </android.support.v7.widget.RecyclerView>

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/filters_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="@dimen/fab_margin"
                android:stateListAnimator="@null"
                app:srcCompat="@drawable/ic_close_24dp"
                app:borderWidth="0dp"
                app:elevation="0dp"/>
            <Button
                android:id="@+id/filters_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textAllCaps="true"
                android:text="@string/filters_reset"
                style="?android:attr/borderlessButtonStyle" />
        </android.support.design.widget.CoordinatorLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
